ready to submit

--- a/Mission6_zm275/appsettings.json
+++ b/Mission6_zm275/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlLiteConnection": " "
+    "SqlLiteConnection": "Data Source = FilmApplication.sqlite"
   }
 }
